--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-slate
-title: template_data_repo
-description: Standardised template for mysociety data repositories
+title: la-emissions-data
+description: Transformed and enhanced version of the BEIS LA emissions dataset
 
-baseurl: "/template_data_repo"
+baseurl: "/la-emissions-data"
 url: "https://mysociety.github.io"
 
 collections:
