--- a/data/packages/uk_local_authority_emissions_data/datapackage.yaml
+++ b/data/packages/uk_local_authority_emissions_data/datapackage.yaml
@@ -1,7 +1,7 @@
 name: uk_local_authority_emissions_data
 title: UK local authority emissions data
 description: "Transformation of BEIS UK local authority subset data\n"
-version: 0.4.0
+version: 1.0.0
 keywords:
 - Climate
 - UK Local data
@@ -41,3 +41,4 @@ custom:
     0.2.0: 'New field(s) added to resource: official-name'
     0.3.0: 'Existing resource field(s) type changed: Industry Total:kt CO2'
     0.4.0: Sheet order changed for resource Local authority emissions labels
+    1.0.0: lock file format
