--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,6 @@ default_page_title = "Settings file defined title"
 [tool.dataset]
 dataset_dir = "data/packages"
 publish_dir = "docs/"
-publish_url = "https://mysociety.github.io/la_emissions_data/"
+publish_url = "https://pages.mysociety.org/la_emissions_data/"
 credit_text = "If you find this data useful, please let us know to help us make the case for future funding."
 credit_url = "https://survey.alchemer.com/s3/6876792/Data-usage"
