--- a/data/packages/uk_local_authority_emissions_data/datapackage.yaml
+++ b/data/packages/uk_local_authority_emissions_data/datapackage.yaml
@@ -1,7 +1,7 @@
 name: uk_local_authority_emissions_data
 title: UK local authority emissions data
 description: "Transformation of BEIS UK local authority subset data\n"
-version: 1.1.0-futurecouncils
+version: 1.1.0
 keywords:
 - Climate
 - UK Local data
@@ -43,3 +43,4 @@ custom:
     0.4.0: Sheet order changed for resource Local authority emissions labels
     1.0.0: lock file format
     1.1.0-futurecouncils: ''
+    1.1.0: ''
